--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "kwiksend-v2",
+  "name": "kwiksend",
   "version": "1.0.0",
+  "description": "KwikSend V2 - Express app",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "path": "^0.12.7",
+    "debug": "^4.3.4"
   }
 }
