--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "kwiksend-v2",
-  "version": "1.0.0",
-  "description": "KwikSend V2 - SPA + simulated API for Render",
+  "version": "1.0.1",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "bcryptjs": "^2.4.3",
+    "uuid": "^9.0.0"
   }
 }
