--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "name": "kwiksend-v2",
-  "version": "1.0.1",
+  "version": "1.0.0",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "bcryptjs": "^2.4.3",
-    "uuid": "^9.0.0"
+    "express": "^4.18.2"
   }
 }
